Added hero section

--- a/index.html
+++ b/index.html
@@ -19,8 +19,22 @@
                 <li class="header__nav-titles">VÅRA RUM</li>
             </ul>
         </nav>
-        <button class="header__btn-booking">BOKA RUM</button>
+        <button class="btn">BOKA RUM</button>
     </header>
+
+    <section class="hero">
+        <figure class="hero__image-box">
+            <img class="hero__image" src="assets/photos/hero-images/hero-ai-kitchen.webp" alt="Hero image of AI-assistent in hotel enviroment">
+        </figure>
+        <article class="hero__description">
+            <h1>BONZ.AI</h1>
+            <p>DIN HÅLLBARA<br>
+                FUTURISTISKA<br>
+                HOTELLUPPLEVELSE
+            </p>
+            <button class="btn btn--small">LÄS MER</button>
+        </article>
+    </section>
     
     <div class="wrapper">
 
