--- a/about-bonzai.html
+++ b/about-bonzai.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
+    <!-- HEADER -->
     <header class="header">
-        <figure class="header__logo">
+        <figure class="logo">
             <a href="index.html" class="header__favicon">
-                <img src="assets/logo/bonz.ai-logo-white-portrait.png" alt="logo" class="header__favicon">
+                <img src="assets/logo/bonz.ai-logo-white-portrait.png" alt="logo" class="logo__favicon">
             </a>
         </figure>
         
@@ -32,21 +33,60 @@
         <button class="btn">BOKA RUM</button>
     </header>
 
-    <section class="hero">
-        <figure class="hero__image-box">
-            <img class="hero__image" src="assets/photos/hero-images/hero-ai-kitchen.webp" alt="Hero image of AI-assistent in hotel enviroment">
-        </figure>
-        <article class="hero__description">
-            <h1>BONZ.AI</h1>
-            <p>DIN HÅLLBARA<br>
-                FUTURISTISKA<br>
-                HOTELLUPPLEVELSE
+    <!-- WRAPPER -->
+    <div class="wrapper">
+        <section class="content">
+            <img class="hero__image" src="assets/photos/facility/bonsai-hotel.jpg" alt="Image of the Hotel Bonzai">
+            <h1 class="content__title">Bonz.ai hotell</h1>
+            <p>
+                I hjärtat av den teknologiska och hållbara framtiden ligger Bonz.ai, ett banbrytande hotell där innovation och natur förenas på ett unikt sätt. Vi är ett futuristiskt hotell som erbjuder en förstklassig upplevelse med en grön livsstil i fokus. På Bonz.ai är varje aspekt av din vistelse designad för att skapa en harmonisk balans mellan teknik och natur och från vårt AI-drivna rum till de hållbara lösningarna i varje hörn av hotellet.
             </p>
-            <button class="btn btn--small">LÄS MER</button>
-        </article>
-    </section>
-    
-   
+            <section class="gallery">
+                <img class="gallery__img" src="assets/photos/facility/hallway.jpg" alt="Image of hotel hallway">
+                <img class="gallery__img" src="assets/photos/facility/bonsai-reception.jpg" alt="Image of hotel reception">
+                <img class="gallery__img" src="assets/photos/facility/conference.jpg" alt="Image of hotel conference room">
+                <img class="gallery__img" src="assets/photos/facility/playground.jpg" alt="Image of hotel playground">
+                <img class="gallery__img" src="assets/photos/facility/cinema.jpg" alt="Image of hotel cinema">
+                <img class="gallery__img" src="assets/photos/facility/dinner-room.jpg" alt="Image of hotel dinner room">
+            </section>
+            <h2 class="content__sub-title">En futurisk miljö</h2>
+            <p>
+                Hotel Bonz.ai erbjuder 120 stiliga rum, varav varje är utrustat med den senaste tekniken för att ge våra gäster en personlig och effektiv upplevelse. Här hittar du även en frukostlounge där vi serverar hållbara och växtbaserade alternativ, samt en konferensavdelning för framtidens möten. Allt för att ge dig den bästa upplevelsen med både komfort och ansvar.
+            </p>
+            <figure class="circle">
+                <img class="circle__image" src="assets/photos/facility/bonsai-tree.jpg" alt="Image of a bonsai tree">
+            </figure>
+            <h2 class="content__sub-title">Byggd efter Bonsai struktur</h2>
+            <p>
+                Namnet Bonz.ai speglar vår vision av det lilla, starka trädet – bonsaiträdet – som representerar tålamod, balans och hållbar tillväxt. Vårt hotell är inte bara en plats att bo, utan en plats för reflektion och en påminnelse om den nödvändiga balansen mellan teknologi och natur.
+            </p>
+        </section>
     </div>
+
+    <!-- FOOTER - ABOUT PAGE -->
+    <footer class="footer">
+        <figure class="logo logo--larger logo--center">
+            <a href="index.html" class="header__favicon">
+                <img src="assets/logo/bonz.ai-logo-white-portrait.png" alt="logo" class="logo__favicon">
+            </a>
+        </figure>
+        <section class="footer__text">
+            <h2 class="footer__title">Bonz.AI hotel</h2>
+            <p class="footer__contact-text">
+                By 80<br>
+                686 93 Sunne
+            </p>
+            <section class="footer__contact">
+                <img class="footer__icon" src="assets/icons/phone3.png" alt="Phone icon">
+                <p class="footer__contact-text">+46 54 152 35</p>
+            </section>
+            <section class="footer__contact">
+                <img class="footer__icon" src="assets/icons/email3.png" alt="Email icon">
+                <p class="footer__contact-text">info@bonzai.com</p>
+            </section>
+        </section>
+
+        <iframe class="footer__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d64055.63902158073!2d12.988436222076409!3d59.88668696960804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464320da325046bd%3A0xb8b6d14d9b43dcd6!2sHotell%20Frykenstrand%2C%20Sure%20Hotel%20Collection%20by%20Best%20Western!5e0!3m2!1ssv!2sse!4v1732962781687!5m2!1ssv!2sse" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </footer>
 </body>
 </html>
