Added hamburger menu

--- a/about-bonzai.html
+++ b/about-bonzai.html
@@ -34,7 +34,7 @@
     </header>
 
     <!-- WRAPPER -->
-    <div class="wrapper">
+    <main class="wrapper">
         <section class="content">
             <img class="hero__image" src="assets/photos/facility/bonsai-hotel.jpg" alt="Image of the Hotel Bonzai">
             <h1 class="content__title">Bonz.ai hotell</h1>
@@ -61,7 +61,7 @@
                 Namnet Bonz.ai speglar vår vision av det lilla, starka trädet – bonsaiträdet – som representerar tålamod, balans och hållbar tillväxt. Vårt hotell är inte bara en plats att bo, utan en plats för reflektion och en påminnelse om den nödvändiga balansen mellan teknologi och natur.
             </p>
         </section>
-    </div>
+    </main>
 
     <!-- FOOTER - ABOUT PAGE -->
     <footer class="footer">
