Continuing working with hamburger menu

--- a/about-bonzai.html
+++ b/about-bonzai.html
@@ -32,7 +32,8 @@
         </nav>
         <button class="btn">BOKA RUM</button>
     </header>
-
+    
+<head></head>
     <!-- WRAPPER -->
     <main class="wrapper">
         <section class="content">
@@ -53,8 +54,8 @@
             <p>
                 Hotel Bonz.ai erbjuder 120 stiliga rum, varav varje är utrustat med den senaste tekniken för att ge våra gäster en personlig och effektiv upplevelse. Här hittar du även en frukostlounge där vi serverar hållbara och växtbaserade alternativ, samt en konferensavdelning för framtidens möten. Allt för att ge dig den bästa upplevelsen med både komfort och ansvar.
             </p>
-            <figure class="circle">
-                <img class="circle__image" src="assets/photos/facility/bonsai-tree.jpg" alt="Image of a bonsai tree">
+            <figure class="hero__image">
+                <img class="hero__image" src="assets/photos/facility/bonsai-tree1.jpg" alt="Image of a bonsai tree">
             </figure>
             <h2 class="content__sub-title">Byggd efter Bonsai struktur</h2>
             <p>
