--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </ul>
         </nav>
 
-        <nav class="header__navigation header__hamburger">
+        <!-- <nav class="header__navigation header__hamburger">
             <ul class="header__nav-list">
                 <li class="header__nav-titles">
                     <a href="about-bonzai.html" class="header__links">OM BONZ.AI</a></li>
@@ -45,7 +45,7 @@
                     <a href="rooms.html" class="header__links">VÅRA RUM</a>
                 </li>
             </ul>
-        </nav>
+        </nav> -->
 
         <input type="checkbox" class="header__hamburger-menu" id="header__hamburger-menu">
         <label class="header__hamburger-btn" for="header__hamburger-menu">
