Done with hamburger menu

--- a/index.html
+++ b/index.html
@@ -15,43 +15,27 @@
             </a>
         </figure>
         
+        <input type="checkbox" class="header__hamburger-menu" id="hamburger-menu">
+        <label class="header__hamburger-btn" for="hamburger-menu">
+            <span></span>
+        </label>
+
         <nav class="header__navigation">
             <ul class="header__nav-list">
                 <li class="header__nav-titles">
-                    <a href="about-bonzai.html" class="header__links">OM BONZ.AI</a></li>
+                    <a href="about-bonzai.html" class="header__links header__links--active">OM BONZ.AI</a></li>
                 <li class="header__nav-titles">
                     <a href="ai.html" class="header__links">AI</a>
                 </li>
                 <li class="header__nav-titles">
                     <a href="eat-and-drink.html" class="header__links">ÄT & DRICK</a>
                 </li>
-                <li class="header__nav-titles">
+                <li class="header__nav-titles header__nav-titles--border-bottom">
                     <a href="rooms.html" class="header__links">VÅRA RUM</a>
                 </li>
             </ul>
         </nav>
-
-        <!-- <nav class="header__navigation header__hamburger">
-            <ul class="header__nav-list">
-                <li class="header__nav-titles">
-                    <a href="about-bonzai.html" class="header__links">OM BONZ.AI</a></li>
-                <li class="header__nav-titles">
-                    <a href="ai.html" class="header__links">AI</a>
-                </li>
-                <li class="header__nav-titles">
-                    <a href="eat-and-drink.html" class="header__links">ÄT & DRICK</a>
-                </li>
-                <li class="header__nav-titles">
-                    <a href="rooms.html" class="header__links">VÅRA RUM</a>
-                </li>
-            </ul>
-        </nav> -->
-
-        <input type="checkbox" class="header__hamburger-menu" id="header__hamburger-menu">
-        <label class="header__hamburger-btn" for="header__hamburger-menu">
-            <span></span>
-        </label>
-
+        
         <button class="btn">BOKA RUM</button>
     </header>
 
