Beginning on booking page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             </ul>
         </nav>
         
-        <button class="btn">BOKA RUM</button>
+        <a href="booking-room.html" class="btn">BOKA RUM</a>
+
+        <!-- <button class="btn">BOKA RUM</button> -->
     </header>
 
     <!-- HERO -->
