--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- HERO -->
     <section class="hero">
         <figure class="hero__image-box">
-            <img class="hero__image" src="assets/photos/hero-images/hero-ai-kitchen.webp" alt="Hero image of AI-assistent in hotel enviroment">
+            <img class="hero__image hero__image--no-radius" src="assets/photos/hero-images/hero-ai-kitchen.webp" alt="Hero image of AI-assistent in hotel enviroment">
         </figure>
         <article class="hero__description">
             <h1>BONZ.AI</h1>
@@ -83,7 +83,8 @@
                     <input type="number" class="booking__input-box" min="0">
                 </label>
             </section>
-            <button class="btn">Boka nu</button>
+            <a href="booking-room.html" class="btn">Boka nu</a>
+            
         </form>
 
         <!-- IMAGE INFO SECTION -->
