Fixed logo and search form

--- a/booking-room.html
+++ b/booking-room.html
@@ -25,9 +25,10 @@
               <a href="booking-room.html" class="btn">BOKA RUM</a>
     </header>
 
-    <!-- WRAPPER -->
+    <!-- WRAPPER - BOOKING ROOM PAGE-->
     <main class="wrapper wrapper--flex-row">
 
+        <!-- SEARCHED BOOKING -->
         <aside class="booking">
             <form class="booking booking--wider booking__input-field--padding">
                 <section class="booking__titles">
@@ -54,109 +55,108 @@
                 <button class="btn">Ny sökning</button>
             </form>
         </aside>
-        
-        <section class="">
+
+        <!-- ROOM BOOKING INFO -->
+        <section class="overview-room">
             <h1>Välj rum</h1>
             <section class="room">
                 <section class="room__card">
                     <figure class="room__gallery">
                         <img class="room__image room__image--large" src="assets/photos/02-day.jpg" alt="Standard room image view">
-                        <img class="room__image" src="assets/photos/01-day.jpg" alt="Standard room image desk">
-                        <img class="room__image" src="assets/photos/03-day.jpg" alt="Standard room image view from bed">
-                        <img class="room__image" src="assets/photos/04-day.jpg" alt="Standard room image bed">
+                        <figure class="room__image-small">
+                            <img class="room__image-small-box" src="assets/photos/01-day.jpg" alt="Standard room image desk">
+                            <img class="room__image-small-box" src="assets/photos/03-day.jpg" alt="Standard room image view from bed">
+                            <img class="room__image-small-box" src="assets/photos/04-day.jpg" alt="Standard room image bed">
+                        </figure>
                     </figure>
-                <section class="room__info">
-                    <section class="room__titles">
-                        <h2 class="room__head-title">Standard</h2>
-                        <h3 class="room__sub-title">Dubbelsäng</h3>
-                    </section>
-
-                    <p class="room__description">Vårt Standardrum med dubbelsäng kombinerar modern teknologi med en bekväm och lyxig miljö. Med en egen AI-assistent som alltid är redo att hjälpa dig oavsett om det handlar om att anpassa rumsbelysningen, boka aktiviteter eller svara på frågor.
-                    </p>
-                    <p class="room__description">
-                    Rummet erbjuder också en privat balkong med utsikt över solnedgången, en bekväm dubbelsäng och gratis WiFi. Perfekt för både avkoppling och produktivitet, med alla bekvämligheter du behöver för en minnesvärd vistelse.
-                    </p>
-                    <h4>Bekvämligheter</h4>
-                    <section class="room__list">
-                        <ul class="room__list-box">
-                            <li class="room__list-item">Privat entre</li>
-                            <li class="room__list-item">Dusch</li>
-                            <li class="room__list-item">Minibar</li>
-                            <li class="room__list-item">Egen AI-assistent</li>
-                            <li class="room__list-item">Gratis WiFi</li>
-                        </ul>
-
-                        <ul class="room__list-bo">
-                            <li class="room__list-item">Eget kök</li>
-                            <li class="room__list-item">Vy mot solnedgång</li>
-                            <li class="room__list-item">Egen balkong</li>
-                            <li class="room__list-item">Dygnet runt service</li>
-                            <li class="room__list-item">Dubbelsäng</li>
-                        </ul>
-                    </section>
-                    <hr>
-                    <section class="room__btn">
-                        <section class="price">
-                            <h2>Totalt 940 kr</h2>
-                            <h3>Inkl. skatter och avgifter</h3>
+                    <section class="room__info">
+                        <section class="room__titles">
+                            <h2 class="room__head-title">Standard</h2>
+                            <h3 class="room__sub-title">Dubbelsäng</h3>
                         </section>
-                        <button class="room__book-btn btn">BOKA NU</button>
+
+                        <p class="room__description">Vårt Standardrum med dubbelsäng kombinerar modern teknologi med en bekväm och lyxig miljö. Med en <strong>egen AI-assistent</strong> som alltid är redo att hjälpa dig oavsett om det handlar om att anpassa rumsbelysningen, boka aktiviteter eller svara på frågor.
+                        </p>
+                        <h4>Bekvämligheter</h4>
+                        <section class="room__list">
+                            <ul class="room__list-box">
+                                <li class="room__list-item">Privat entre</li>
+                                <li class="room__list-item">Dusch</li>
+                                <li class="room__list-item">Minibar</li>
+                                <li class="room__list-item">Egen AI-assistent</li>
+                                <li class="room__list-item">Gratis WiFi</li>
+                            </ul>
+
+                            <ul class="room__list-bo">
+                                <li class="room__list-item">Eget kök</li>
+                                <li class="room__list-item">Vy mot solnedgång</li>
+                                <li class="room__list-item">Egen balkong</li>
+                                <li class="room__list-item">Dygnet runt service</li>
+                                <li class="room__list-item">Dubbelsäng</li>
+                            </ul>
+                        </section>
+                        <hr>
+                        <section class="room__btn">
+                            <section class="price">
+                                <h2>Totalt 940 kr</h2>
+                                <h3>Inkl. skatter och avgifter</h3>
+                            </section>
+                            <button class="room__book-btn btn">BOKA NU</button>
+                        </section>
                     </section>
                 </section>
-            </section>
             </section>     
             <section class="room">
                 <section class="room__card">
                     <figure class="room__gallery">
                         <img class="room__image room__image--large" src="assets/photos/02-day.jpg" alt="Standard room image view">
-                        <img class="room__image" src="assets/photos/01-day.jpg" alt="Standard room image desk">
-                        <img class="room__image" src="assets/photos/03-day.jpg" alt="Standard room image view from bed">
-                        <img class="room__image" src="assets/photos/04-day.jpg" alt="Standard room image bed">
+                        <figure class="room__image-small">
+                            <img class="room__image-small-box" src="assets/photos/01-day.jpg" alt="Standard room image desk">
+                            <img class="room__image-small-box" src="assets/photos/03-day.jpg" alt="Standard room image view from bed">
+                            <img class="room__image-small-box" src="assets/photos/04-day.jpg" alt="Standard room image bed">
+                        </figure>
                     </figure>
-                <section class="room__info">
-                    <section class="room__titles">
-                        <h2 class="room__head-title">Standard</h2>
-                        <h3 class="room__sub-title">Dubbelsäng</h3>
-                    </section>
-
-                    <p class="room__description">Vårt Standardrum med dubbelsäng kombinerar modern teknologi med en bekväm och lyxig miljö. Med en egen AI-assistent som alltid är redo att hjälpa dig oavsett om det handlar om att anpassa rumsbelysningen, boka aktiviteter eller svara på frågor.
-                    </p>
-                    <p class="room__description">
-                    Rummet erbjuder också en privat balkong med utsikt över solnedgången, en bekväm dubbelsäng och gratis WiFi. Perfekt för både avkoppling och produktivitet, med alla bekvämligheter du behöver för en minnesvärd vistelse.
-                    </p>
-                    <h4>Bekvämligheter</h4>
-                    <section class="room__list">
-                        <ul class="room__list-box">
-                            <li class="room__list-item">Privat entre</li>
-                            <li class="room__list-item">Dusch</li>
-                            <li class="room__list-item">Minibar</li>
-                            <li class="room__list-item">Egen AI-assistent</li>
-                            <li class="room__list-item">Gratis WiFi</li>
-                        </ul>
-
-                        <ul class="room__list-bo">
-                            <li class="room__list-item">Eget kök</li>
-                            <li class="room__list-item">Vy mot solnedgång</li>
-                            <li class="room__list-item">Egen balkong</li>
-                            <li class="room__list-item">Dygnet runt service</li>
-                            <li class="room__list-item">Dubbelsäng</li>
-                        </ul>
-                    </section>
-                    <hr>
-                    <section class="room__btn">
-                        <section class="price">
-                            <h2>Totalt 940 kr</h2>
-                            <h3>Inkl. skatter och avgifter</h3>
+                    <section class="room__info">
+                        <section class="room__titles">
+                            <h2 class="room__head-title">Premium</h2>
+                            <h3 class="room__sub-title">Dubbelsäng</h3>
                         </section>
-                        <button class="room__book-btn btn">BOKA NU</button>
+
+                        <p class="room__description">Vårt Premiumrum erbjuder en lyxig och modern vistelse med <strong>två AI-assistenter</strong> som sätter en ny standard för bekvämlighet och service. Koppla av i stil och njut av exklusiva detaljer som gör din vistelse oförglömlig.
+                        </p>
+                        <h4>Bekvämligheter</h4>
+                        <section class="room__list">
+                            <ul class="room__list-box">
+                                <li class="room__list-item">2 AI-assistenter</li>
+                                <li class="room__list-item">Premiumlakan</li>
+                                <li class="room__list-item">Minibar</li>
+                                <li class="room__list-item">Egen AI-assistent</li>
+                                <li class="room__list-item">Gratis WiFi</li>
+                            </ul>
+
+                            <ul class="room__list-bo">
+                                <li class="room__list-item">Eget kök</li>
+                                <li class="room__list-item">Vy mot solnedgång</li>
+                                <li class="room__list-item">Egen balkong</li>
+                                <li class="room__list-item">Dygnet runt service</li>
+                                <li class="room__list-item">Dubbelsäng</li>
+                            </ul>
+                        </section>
+                        <hr>
+                        <section class="room__btn">
+                            <section class="price">
+                                <h2>Totalt 940 kr</h2>
+                                <h3>Inkl. skatter och avgifter</h3>
+                            </section>
+                            <button class="room__book-btn btn">BOKA NU</button>
+                        </section>
                     </section>
                 </section>
-            </section>
-            </section>       
+            </section>   
         </section>
     </main>
 
-    <!-- FOOTER - ABOUT PAGE -->
+    <!-- FOOTER - BOOKING ROOM PAGE -->
     <footer class="footer">
         <figure class="logo logo--larger logo--center">
             <a href="index.html" class="header__favicon">
