--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="header__navigation">
             <ul class="header__nav-list">
                 <li class="header__nav-titles">
-                    <a href="about-bonzai.html" class="header__links header__links--active">OM BONZ.AI</a></li>
+                    <a href="about-bonzai.html" class="header__links">OM BONZ.AI</a></li>
                 <li class="header__nav-titles">
                     <a href="ai.html" class="header__links">AI</a>
                 </li>
@@ -35,23 +35,22 @@
                 </li>
             </ul>
         </nav>
-        
         <a href="booking-room.html" class="btn">BOKA RUM</a>
-
-        <!-- <button class="btn">BOKA RUM</button> -->
     </header>
 
     <!-- HERO -->
     <section class="hero">
         <figure class="hero__image-box">
-            <img class="hero__image hero__image--no-radius" src="assets/photos/hero-images/hero-ai-kitchen.webp" alt="Hero image of AI-assistent in hotel enviroment">
+            <img class="hero__image hero__image--no-radius" src="assets/photos/hero-images/hero-ai-kitchen.webp" alt="Hero image of AI-assistent in hotel enviroment"> <!-- AI-GENERAD BILD -->
         </figure>
         <article class="hero__description">
-            <h1>BONZ.AI</h1>
-            <p>DIN HÅLLBARA<br>
-                FUTURISTISKA<br>
-                HOTELLUPPLEVELSE
-            </p>
+            <section>
+                <h1>BONZ.AI</h1>
+                <p>DIN HÅLLBARA<br>
+                    FUTURISTISKA<br>
+                    HOTELLUPPLEVELSE
+                </p>
+            </section>
             <a href="about-bonzai.html" class="btn btn--small">
             LÄS MER
             </a>
@@ -92,7 +91,7 @@
             <section class="image-info__block">
                 <figure class="image-info__figure">
                     <img src="assets/photos/facility/bonsai-hotel.jpg" alt="Image of the Hotel Bonzai" class="image-info__img">
-                </figure>
+                </figure> <!-- AI-GENERAD BILD -->
                 <section class="image-info__text">
                     <h2 class="image-info__title">GRÖN DESIGN</h2>
                     <p class="image-info__description">Hotellets arkitektur smälter samman med naturen, med gröna väggar och takträdgårdar för att minska värmeöar och förbättra luftkvaliteten.</p>
@@ -106,13 +105,13 @@
                 </section>
                 <figure class="image-info__figure">
                     <img src="assets/photos/robots/ai-kitchen-bed.webp" alt="Image of AI-robots who assists in various hotel jobs" class="image-info__img">
-                </figure>
+                </figure> <!-- AI-GENERAD BILD -->
             </section>
 
             <section class="image-info__block">
                 <figure class="image-info__figure">
                     <img src="assets/photos/robots/kitchen-food.jpg" alt="Image of AI-robots who assists in various hotel jobs" class="image-info__img">
-                </figure>
+                </figure> <!-- AI-GENERAD BILD -->
                 <section class="image-info__text">
                     <h2 class="image-info__title">ZERO WASTE-KÖK</h2>
                     <p class="image-info__description">Alla måltider tillagas med lokala, ekologiska ingredienser, och matsvinn återvinns till biogas eller kompost. Fisk och andra råvaror kommer från närområdet.</p>
@@ -123,7 +122,7 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-        <figure class="logo logo--larger logo--center">
+        <figure class="footer__logo">
             <a href="index.html" class="header__favicon">
                 <img src="assets/logo/bonz.ai-logo-white-portrait.png" alt="logo" class="logo__favicon">
             </a>
